--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><title>@cyberniggers</title><meta name="description" content="cyberniggers.com | breachforums.st"><meta content="website" property="og:type"><meta content="cyberniggers" property="og:title"><meta content="default settings all day" property="og:description"><meta content="cyberniggers" name="author"><style>body{font-family: 'Array', sans-serif!important;}</style><style>
+i have 0 clue what to do with this web - frostynfo
